Background image (responsive) and nav (with elements)

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+html {
+  height: 100%;
+}
+
 body {
   background-color: #2f3035;
+  background-image: url(images/background-adare-restaurant.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .container {
@@ -9,18 +17,21 @@ body {
 }
 
 header {
-  background-color: blue;
+  background-color: rgba(0, 0, 0, 0);
   height: 118px;
   text-align: center;
 }
 
 nav {
-  background-color: red;
-  height: 40px;
+  background-color: rgba(0, 0, 0, 0.363);
+  text-align: center;
+  padding-top: 14px;
+  padding-bottom: 14px;
+
 }
 
 main {
-  background-color: #2f3035;
+  background-color: rgba(0, 0, 0, 0);
   height: 400px;
   text-align: center;
   padding-top: 80px;
@@ -48,5 +59,12 @@ h1 {
 a {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+nav a {
   text-decoration: none;
+  font-size: 12px;
+  padding-left: 10px;
+  padding-right: 10px;
+
 }
