--- a/style.css
+++ b/style.css
@@ -40,9 +40,16 @@ main {
 }
 
 footer {
-  background-color: greenyellow;
-  height: 100px;
+  background-color: rgba(0, 0, 0, 0.363);
 }
+
+footer p{
+  font-size: 12px;
+  text-align: center; 
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+  
 
 p {
   font-family: Arial, Helvetica, sans-serif;
