--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ main {
 }
 
 footer {
+  margin-top: 50px;
   background-color: rgba(0, 0, 0, 0.363);
 }
 
@@ -50,7 +51,6 @@ footer p{
   padding-bottom: 50px;
 }
   
-
 p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
@@ -74,4 +74,9 @@ nav a {
   padding-left: 10px;
   padding-right: 10px;
 
+}
+
+.video_preview{
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
